# AgenticAI_Appointment-Assistance-System

./: .gitignore  README.md  main.py  pyproject.toml  web_app.py
src/agent/: graph.py  logging_utils.py  middleware.py  nodes.py  state.py
static/: style.css
templates/: confirm.html  index.html  result.html  review.html  slot.html  thanks.html
tests/: test_smoke.py
